[package]
name = "twitch_recover_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
rand = "0.8.5"
dialoguer = "0.10.4"
color-eyre = "0.6.2"
thiserror = "1.0.43"
clap = { version = "4.3.11", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
chrono = "0.4.26"